kubernetes/apps/immich/deployment-machine-learning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
    spec:
      serviceAccountName: immich
      automountServiceAccountToken: false
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 512Mi
          volumeMounts:
            - name: machine-learning-cache
              mountPath: /cache
      volumes:
        - name: machine-learning-cache
          persistentVolumeClaim:
            claimName: immich-machine-learning-pvc
      nodeSelector:
        worker: "true"
