kubernetes/apps/immich/deployment-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
    spec:
      serviceAccountName: immich
      automountServiceAccountToken: false
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1036
            runAsGroup: 100
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 512Mi
          volumeMounts:
            - name: immich-nfs
              mountPath: /data
      volumes:
        - name: immich-nfs
          persistentVolumeClaim:
            claimName: immich-nfs-pvc
      nodeSelector:
        worker: "true"
