kubernetes/apps/immich/deployment-valkey.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-valkey
    spec:
      serviceAccountName: immich
      automountServiceAccountToken: false
      containers:
        - name: valkey
          image: ghcr.io/valkey-io/valkey
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
          ports:
            - name: valkey
              containerPort: 6379
              protocol: TCP
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: valkey-data
              mountPath: /data
      volumes:
        - name: valkey-data
          persistentVolumeClaim:
            claimName: valkey-immich-pvc
      nodeSelector:
        worker: "true"
