kubernetes/apps/immich/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-valkey
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: valkey
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
