kubernetes/apps/immich/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`immich.home.lungoo.de`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
